<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/background">

	<TableLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:stretchColumns="*"
		android:layout_gravity="center_horizontal"
		android:padding="10dp">

		<TableRow>
			<TextView
				android:text="@string/app_name"
				android:gravity="center"
                android:textSize="85sp"
				android:textStyle="bold"
				android:textColor="#FFFFFF"/>
		</TableRow>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/Play"
                android:text="@string/play"
                android:textStyle="bold"
                android:textSize="27sp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/Instructions"
                android:text="@string/instructions"
                android:textStyle="bold"
                android:textSize="27sp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/FloodEmAll"
                android:text="@string/FloodEmAll"
                android:textStyle="bold"
                android:textSize="27sp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/Blox"
                android:text="@string/Bloxorz"
                android:textStyle="bold"
                android:textSize="27sp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
	</TableLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:padding="10dp">

        <Button
            android:id="@+id/Exit"
            android:text="@string/exit"
            android:textStyle="bold"
            android:textSize="27sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</RelativeLayout>
